<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/scanFragment">

    <fragment
        android:id="@+id/scanFragment"
        android:name="com.aegisai.app.ui.scan.ScanFragment"
        android:label="@string/nav_scan" />
    <fragment
        android:id="@+id/vishingFragment"
        android:name="com.aegisai.app.ui.vishing.VishingFragment"
        android:label="@string/nav_vishing" />
    <fragment
        android:id="@+id/trainingFragment"
        android:name="com.aegisai.app.ui.training.TrainingFragment"
        android:label="@string/nav_training" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.aegisai.app.ui.profile.ProfileFragment"
        android:label="@string/nav_profile" />
</navigation>
